# crossbill-web

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build-for-docker-hub.sh  build-for-homelab.sh  docker-compose.dev.yml  docker-compose.yml  garage.toml  package-lock.json  package.json  project_plan.md
backend/: .env.example  .gitignore  ASYNC_MIGRATION_PLAN.md  Claude.md  README.md  alembic.ini  claude.md  di_migration.md  docker-compose.yml  pyproject.toml  user_plan.md
backend/alembic/: env.py
backend/alembic/versions/: 001_add_books_chapters_update_highlights.py  004_add_deleted_at_to_highlights.py  007_add_tags_table.py  008_add_book_tags_join_table.py  013_add_users_table.py  016_add_content_hash_to_highlights.py  017_add_content_hash_to_books.py  024_add_reading_sessions_table.py  025_add_epub_path_to_books.py  026_add_client_book_id_to_books.py  027_populate_client_book_id_for_existing_books.py  028_drop_content_hash_from_books.py  029_add_xpoint_columns_to_highlights.py  030_add_ai_summary_to_reading_sessions.py  031_add_reading_session_highlights_join_table.py  032_add_parent_to_chapters.py  033_allow_duplicate_chapter_names_at_different_levels.py  034_reset_epub_paths_to_null.py  035_rename_epub_path_add_file_type.py  036_scope_highlight_deduplication_by_book.py  037_recalculate_content_hashes.py  038_add_chapter_prereading_contents_and_xpoints.py  040_add_position_columns.py  041_add_highlight_style_to_highlights.py  042_add_chapter_id_to_flashcards.py  043_add_end_position_to_books.py  044_add_ai_usage_records.py  045_add_ai_chat_sessions.py  045_add_quiz_sessions.py  046_add_batch_processing_tables.py  046_drop_cover_column_from_books.py  046_remove_quiz_completion_tracking.py  047_add_questions_to_chapter_prereading_contents.py  048_add_refresh_tokens_table.py  048_create_refresh_tokens_table.py  049_create_job_batches_table.py  050_add_uuid_columns_to_books.py  050_rename_file_path_add_cover_file.py  051_clear_file_references_for_uuid_migration.py  051_switch_books_to_uuid_pk.py  (+10 more)
backend/crossbill/: config.py  main.py  models.py  repositories.py  schemas.py
backend/crossbill/repositories/: __init__.py  book_repository.py  chapter_repository.py  highlight_repository.py  tag_repository.py
backend/crossbill/routers/: books.py  highlight.py  highlights.py
backend/crossbill/schemas/: __init__.py  highlight_schemas.py
backend/crossbill/services/: __init__.py  book_service.py  highlight_service.py  tag_service.py
backend/docs/: position-index-design-prompt.md  service-migration-guide.md
backend/docs/superpowers/plans/: 2026-04-04-background-job-queue.md
backend/inkwell/: __init__.py  config.py  database.py  main.py  models.py
backend/scripts/: rename_book_files.py  rename_cover_files.py
backend/src/: __init__.py  config.py  constants.py  core.py  database.py  dependencies.py  exceptions.py  feature_flags.py  hash_utils.py  main.py  models.py  utils.py  worker.py
backend/src/application/: __init__.py
backend/src/application/ai/: ai_usage_context.py
backend/src/application/common/: __init__.py  command.py  ownership.py  pagination.py  query.py  result.py  unit_of_work.py
backend/src/application/identity/: __init__.py  dtos.py
backend/src/application/learning/: __init__.py
backend/src/application/notes/: __init__.py
backend/src/application/ports/: __init__.py
backend/src/application/reading/: __init__.py
backend/src/containers/: __init__.py  identity.py  jobs.py  learning.py  library.py  notes.py  reading.py  reflection.py  root.py  shared.py
backend/src/domain/: __init__.py
backend/src/domain/common/: __init__.py  aggregate_root.py  domain_event.py  entity.py  exceptions.py  types.py  value_object.py
backend/src/domain/identity/: __init__.py  exceptions.py
backend/src/domain/jobs/: exceptions.py
backend/src/domain/learning/: __init__.py  exceptions.py
backend/src/domain/notes/: __init__.py  exceptions.py
backend/src/domain/reading/: __init__.py  exceptions.py
backend/src/domain/reflection/: exceptions.py
backend/src/infrastructure/: __init__.py  container.py
backend/src/repositories/: __init__.py  book_repository.py  chapter_repository.py  flashcard_repository.py  highlight_repository.py  highlight_tag_repository.py  reading_session_repository.py  tag_repository.py  user_repository.py
backend/src/routers/: auth.py  books.py  ereader.py  flashcards.py  highlights.py  highlights_ai.py  reading_sessions.py  reading_sessions_ai.py  settings.py  users.py
backend/src/schemas/: __init__.py  book_schemas.py  chapter_schemas.py  flashcard_api_schemas.py  flashcard_schemas.py  highlight_schemas.py  highlight_tag_schemas.py  reading_session_schemas.py  settings_schemas.py  user_schemas.py
backend/src/services/: __init__.py  auth_service.py  book_service.py  book_tag_service.py  epub_service.py  flashcard_service.py  highlight_service.py  highlight_tag_service.py  reading_session_service.py  tag_service.py  users_service.py
backend/tests/: __init__.py  conftest.py  test_batch_jobs.py  test_book_reflections.py  test_bookmarks.py  test_books.py  test_chapter_content.py  test_chat_sessions.py  test_epub_text_extraction.py  test_epub_toc_chapters.py  test_ereader_epub_upload.py  test_ereader_prereading.py  test_flashcards.py  test_highlight_chapter_association.py  test_highlight_labels.py  test_highlights.py  test_highlights_ai.py  test_main.py  test_middleware_file_response.py  test_note_repository.py  test_notes.py  test_quiz_sessions.py  test_rate_limit.py  test_reading_sessions.py  test_tag_groups.py  test_tag_soft_delete.py  test_token_rotation.py  test_utils.py  test_xpoint.py
backend/tests/unit/: test_config.py
clients/anki-plugin/: .gitignore  README.md  __init__.py  api.py  config.json  manifest.json  models.py  note_creator.py  pyproject.toml
clients/anki-plugin/ui/: __init__.py  browser_dialog.py  settings_dialog.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/crossbill_mcp/: client.py  server.py
(+765 files in other folders)
