[project]
name = "crossbill-backend"
version = "0.1.0"
description = "crossbill backend - KOReader highlights sync server"
authors = [{ name = "User", email = "user@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi>=0.121.1,<0.137.0",
  "uvicorn[standard]>=0.44.0,<0.45.0",
  "sqlalchemy[asyncio]>=2.0.44,<3.0.0",
  "alembic>=1.17.1,<2.0.0",
  "psycopg[binary]>=3.2.12,<4.0.0",
  "psycopg2-binary>=2.9.11,<3.0.0",
  "ebooklib>=0.20,<1.0",
  "httpx>=0.28.1,<0.29.0",
  "Pillow>=11.0.0",
  "python-multipart>=0.0.20,<0.0.25",
  "structlog>=25.5.0,<26.0.0",
  "pyjwt[crypto]>=2.12.1,<3.0.0",
  "pwdlib[argon2]>=0.3.0,<0.4.0",
  "slowapi>=0.1.9,<0.2.0",
  "pydantic-ai>=1.76.0,<2.0.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "dependency-injector>=4.49.0,<5.0.0",
  "saq[postgres]>=0.22.0,<1.0.0",
  "boto3>=1.38.0,<2.0.0",
  "blurhash-python>=1.2.2",
]

[dependency-groups]
dev = [
  "ruff>=0.14.4",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.2.0",
  "httpx>=0.28.1",
  "pyright>=1.1.398",
  "lxml-stubs>=0.5.1",
  "aiosqlite>=0.22.1",
  "import-linter>=2.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "UP",    # pyupgrade
  "ANN",   # flake8-annotations
  "ASYNC", # flake8-async
  "S",     # flake8-bandit
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "T10",   # flake8-debugger
  "ICN",   # flake8-import-conventions
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise
  "RET",   # flake8-return
  "SIM",   # flake8-simplify
  "PTH",   # flake8-use-pathlib
  "PL",    # pylint
  "RUF",   # ruff-specific rules
]
ignore = [
  "E501",    # Line too long (handled by formatter)
  "S101",    # Use of assert detected (ok in tests)
  "PLR0913", # Too many arguments in function definitions (api endpoints might have more)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",     # Use of assert in tests
  "S105",     # Possible hardcoded password in comparison
  "S106",     # Possible hardcoded password in argument
  "ANN001",   # Missing type annotation for function argument
  "PLR2004",  # Magic value in comparison
  "PT019",    # Fixture without value injected as parameter
  "ASYNC240", # pathlib.Path.read_bytes() in async tests is acceptable
]
"tests/test_epub_toc_chapters.py" = [
  "ANN001", # Missing type annotation for function argument
  "ANN201", # Missing return type annotation for public function
]
"src/**/routers/*.py" = [
  "B008", # FastAPI Depends() in argument defaults is intentional
]

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"
indent-style = "space"

[tool.importlinter]
root_packages = ["src"]

[[tool.importlinter.contracts]]
id = "domain-independence"
name = "Domain layer must not import application or infrastructure"
type = "forbidden"
source_modules = ["src.domain"]
forbidden_modules = ["src.application", "src.infrastructure", "src.containers"]

[[tool.importlinter.contracts]]
id = "application-no-infra"
name = "Application layer must not directly import infrastructure"
type = "forbidden"
source_modules = ["src.application"]
forbidden_modules = ["src.infrastructure"]

[[tool.importlinter.contracts]]
id = "orm-boundary"
name = "ORM models must only be directly imported in repository and mapper modules"
type = "forbidden"
allow_indirect_imports = "true"
source_modules = [
    "src.domain",
    "src.application",
    "src.containers",
    "src.infrastructure.ai.ai_agents",
    "src.infrastructure.ai.ai_model",
    "src.infrastructure.ai.ai_service",
    "src.infrastructure.common.dependencies",
    "src.infrastructure.common.di",
    "src.infrastructure.common.rate_limit",
    "src.infrastructure.common.routers",
    "src.infrastructure.common.schemas",
    "src.infrastructure.common.sql",
    "src.infrastructure.identity.dependencies",
    "src.infrastructure.identity.routers",
    "src.infrastructure.identity.schemas",
    "src.infrastructure.identity.services",
    "src.infrastructure.jobs.routers",
    "src.infrastructure.jobs.schemas",
    "src.infrastructure.jobs.tasks",
    "src.infrastructure.jobs.saq_job_queue_service",
    "src.infrastructure.jobs.saq_queue",
    "src.infrastructure.learning.routers",
    "src.infrastructure.learning.schemas",
    "src.infrastructure.library.routers",
    "src.infrastructure.library.schemas",
    "src.infrastructure.library.services",
    "src.infrastructure.reading.routers",
    "src.infrastructure.reading.schemas",
    "src.infrastructure.reading.services",
]
forbidden_modules = ["src.models", "src.infrastructure.jobs.orm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
log_level = "WARNING"
filterwarnings = [
    "ignore:.*_UnionGenericAlias.*:DeprecationWarning:google.genai",
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:slowapi",
]
