[project]
name = "crossbill-mcp"
version = "0.1.0"
description = "MCP server for Crossbill reading companion"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
crossbill-mcp = "crossbill_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
